src/components/FeedbackHub/UpvoteButton/UpvoteButton.module.scss
@use '@/stylesheets/variables' as var;
@use '@/stylesheets/mixins' as mix;

.container {
  align-self: flex-start;
}

.button {
  @include mix.UpvoteButton;
  color: inherit;
}

.count {
}

.icon {
}

@media (width <= var.$breakpoint-762) {
  .container {
    gap: 0.625rem;
    width: initial;
    flex-direction: row;
    padding-block: 0.375rem;
    padding-inline: 1rem 0.813rem;
  }
}

